@@ -39,6 +39,11 @@
 	return [[[self alloc] initWithName:name] autorelease];
 }
 
++(id) animationWithName:(NSString*)name frames:(NSArray*)frames
+{
+	return [[[self alloc] initWithName:name frames:frames] autorelease];
+}
+
 +(id) animationWithName:(NSString*)aname delay:(float)d frames:(NSArray*)array
 {
 	return [[[self alloc] initWithName:aname delay:d frames:array] autorelease];
@@ -52,6 +57,11 @@
 -(id) initWithName:(NSString*)name
 {
 	return [self initWithName:name delay:0 frames:nil];
+}
+
+-(id) initWithName:(NSString*)name frames:(NSArray*)frames
+{
+	return [self initWithName:name delay:0 frames:frames];
 }
 
 -(id) initWithName:(NSString*)t delay:(float)d
